--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,11 @@ header {
   position: relative;
 }
 
+header nav,
+header .button-container {
+  flex-basis: 160px;
+}
+
 header nav ul {
   display: flex;
   gap: 30px;
@@ -28,11 +33,16 @@ header a:active {
   opacity: 0.8;
 }
 
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
 header button {
-  margin-inline: 20.5px; /* accounting for nav being 41px wider than button --> aligning footer and header logo exactly above each other */
   background-color: var(--text-primary);
   color: var(--text-invert);
   border-radius: 1.75em;
+  margin-left: 27,86px;
   padding: 0.75em 1.25em;
   cursor: pointer;
   transition: transform 100ms ease;
@@ -47,7 +57,8 @@ header button:active {
   transform: scale(0.95);
 }
 
-#menu {
+#menu,
+#close-li {
   display: none;
 }
 
@@ -58,24 +69,105 @@ header button:active {
 }
 
 @media (max-width: 700px) {
+
   header {
     justify-content: center;
   }
   
-  header button,
-  header nav {
+  header .button-container
+  {
     display: none;
   }
 
   #menu {
-    font-size: 1.5rem;
     display: unset;
+    font-size: 1.5rem;
     position: absolute;
     right: var(--padding-section-mobile);
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
   }
+
+  .show {
+    transform: translateX(0);
+  }
+
+  header nav {
+    display: none; 
+  }
+
+  /* header nav {
+    width: 33.34%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    transform: translateX(100%);
+    height: 100vh;
+    z-index: 2;
+  } */
+
+  /* header nav ul {
+    padding-top: 30px;
+    display: flex;
+    gap: 0;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: var(--text-primary);
+    position: relative;
+  } */
+
+  /* #close-li {
+    display: initial;
+    border-top: none;
+    text-align: right;
+    padding-right: 10px;
+  }
+
+  #close-btn {
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    position: relative;
+    top: -15px;
+  }
+
+  #close-btn:hover,
+  #close-btn:active {
+    color: var(--accent);
+  }
+
+  header nav ul li:first-of-type {
+    border-top: 1px solid white;
+  }
+
+  header nav ul li {
+    border-bottom: 1px solid white;
+    padding-block: 5px;
+  }
+
+  header nav ul li:hover:not(#close-li),
+  header nav ul li:active:not(#close-li) {
+    background-color: var(--text-secondary);
+  }
+
+  header nav ul li a {
+    color: white;
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+
+  header a:hover {
+    text-decoration: none;
+  }
+  
+  header a:active {
+    opacity: 1;
+  } */
+
 }
 
 @media (max-width: 350px) {
