--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   gap: var(--padding-section-desktop);
+  margin-bottom: 60px;
 }
 
 /* Ensuring equalliy sized flex items */
