--- a/styles/header.css
+++ b/styles/header.css
@@ -57,8 +57,7 @@ header button:active {
   transform: scale(0.95);
 }
 
-#menu,
-#close-li {
+#menu {
   display: none;
 }
 
@@ -89,84 +88,9 @@ header button:active {
     cursor: pointer;
   }
 
-  .show {
-    transform: translateX(0);
-  }
-
   header nav {
     display: none; 
   }
-
-  /* header nav {
-    width: 33.34%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    transform: translateX(100%);
-    height: 100vh;
-    z-index: 2;
-  } */
-
-  /* header nav ul {
-    padding-top: 30px;
-    display: flex;
-    gap: 0;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background-color: var(--text-primary);
-    position: relative;
-  } */
-
-  /* #close-li {
-    display: initial;
-    border-top: none;
-    text-align: right;
-    padding-right: 10px;
-  }
-
-  #close-btn {
-    color: white;
-    font-size: 2rem;
-    cursor: pointer;
-    position: relative;
-    top: -15px;
-  }
-
-  #close-btn:hover,
-  #close-btn:active {
-    color: var(--accent);
-  }
-
-  header nav ul li:first-of-type {
-    border-top: 1px solid white;
-  }
-
-  header nav ul li {
-    border-bottom: 1px solid white;
-    padding-block: 5px;
-  }
-
-  header nav ul li:hover:not(#close-li),
-  header nav ul li:active:not(#close-li) {
-    background-color: var(--text-secondary);
-  }
-
-  header nav ul li a {
-    color: white;
-    width: 100%;
-    display: block;
-    text-align: center;
-  }
-
-  header a:hover {
-    text-decoration: none;
-  }
-  
-  header a:active {
-    opacity: 1;
-  } */
 
 }
 
