--- a/styles/header.css
+++ b/styles/header.css
@@ -70,7 +70,12 @@ header button:active {
 @media (max-width: 700px) {
 
   header {
-    justify-content: center;
+    height: unset;
+    min-height: 80px;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 30px 0 0 0;
   }
   
   header .button-container
@@ -83,13 +88,49 @@ header button:active {
     font-size: 1.5rem;
     position: absolute;
     right: var(--padding-section-mobile);
-    top: 50%;
+    top: 40px;
     transform: translateY(-50%);
     cursor: pointer;
   }
 
+  #menu:hover {
+    color: var(--text-secondary);
+  }
+
   header nav {
-    display: none; 
+    width: 100%;
+    display: none;
+    order: 1;
+    flex-basis: unset;
+    border-top: 1px solid var(--text-primary);
+    border-bottom: 1px solid var(--text-primary);
+  }
+
+  header nav.active {
+    display: block;
+  }
+
+  header nav ul {
+    flex-direction: column;
+    text-align: center;
+    gap: 0;
+  }
+
+  header nav ul li {
+    padding-block: 10px;
+    cursor: pointer;
+  }
+
+  header nav ul li:hover {
+   background-color: var(--accent);
+  }
+
+  header nav li a {
+    text-decoration: none;
+  }
+
+  header a:hover {
+    text-decoration: none;
   }
 
 }
