--- a/styles/courses.css
+++ b/styles/courses.css
@@ -12,6 +12,9 @@
   border-radius: 40px;
   padding: 40px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .course h2 {
@@ -30,9 +33,7 @@
   font-weight: 400;
   line-height: 1.5;
   color: var(--text-secondary);
-  margin-top: 30px;
-  margin-bottom: 40px;
-  height: 40%;
+  height: 50%;
 }
 
 .course button {
@@ -42,6 +43,7 @@
   font-size: 1.125rem;
   color: var(--text-primary);
   cursor: pointer;
+  align-self: flex-start;
   border: 1.5px solid #DCDCDC;
   padding: 0.75em 1.25em;
   border-radius: 2em;
@@ -72,10 +74,23 @@
   .courses-grid {
     padding-inline: var(--padding-section-tablet);
   }
+  .course h2 {
+    font-size: 2.25rem;
+  }
+  .course h3 {
+    font-size: 1.25rem;
+  }
+  .course p {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
 }
 
 @media (max-width: 700px) {
   .courses-grid {
     padding-inline: var(--padding-section-mobile);
+  }
+  .course h2 {
+    font-size: 2rem;
   }
 }
