--- a/styles/index.css
+++ b/styles/index.css
@@ -28,5 +28,8 @@ body {
     max-width: 1440px;
     margin: 0 auto;
   }
+  footer {
+    max-width: calc(1440px - 2* var(--padding-section-desktop));
+  }
 }
 
