--- a/styles/header.css
+++ b/styles/header.css
@@ -68,7 +68,7 @@ header button:active {
   }
   
 }
-
+/* Props to you for achieving this! Looks great and is functional! */
 @media (max-width: 700px) {
 
   header {
